[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/Horse.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ground.png" type="Texture" id=4]
[ext_resource path="res://scenes/Cloud.tscn" type="PackedScene" id=5]
[ext_resource path="res://theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/game.mp3" type="AudioStream" id=7]

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 1920, 540 )
b = Vector2( 1920, 1080 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 0, 540 )
b = Vector2( 1920, 540 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0, 1080 )
b = Vector2( 1920, 1080 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
cloud_scene = ExtResource( 5 )
horse_scene = ExtResource( 3 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="CloudTimer" type="Timer" parent="."]
autostart = true

[node name="HorseTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 540.0
margin_right = 496.0
margin_bottom = 675.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
stretch_mode = 2

[node name="HorizontalBounds" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="RightBound" type="CollisionShape2D" parent="HorizontalBounds"]
shape = SubResource( 3 )

[node name="VerticalBounds" type="StaticBody2D" parent="."]

[node name="TopBound" type="CollisionShape2D" parent="VerticalBounds"]
shape = SubResource( 2 )

[node name="BottomBound" type="CollisionShape2D" parent="VerticalBounds"]
shape = SubResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1808, 828 )

[node name="Horse" parent="." instance=ExtResource( 3 )]
position = Vector2( 1814, 837 )
randomize_position = false

[node name="FocusControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../CanvasLayer/CenterContainer/VBoxContainer/RestartButton")
focus_neighbour_top = NodePath("../CanvasLayer/CenterContainer/VBoxContainer/RestartButton")
focus_neighbour_right = NodePath("../CanvasLayer/CenterContainer/VBoxContainer/RestartButton")
focus_neighbour_bottom = NodePath("../CanvasLayer/CenterContainer/VBoxContainer/RestartButton")
focus_next = NodePath("../CanvasLayer/CenterContainer/VBoxContainer/RestartButton")
focus_previous = NodePath("../CanvasLayer/CenterContainer/VBoxContainer/RestartButton")
focus_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 704.0
margin_top = 402.0
margin_right = 1216.0
margin_bottom = 678.0
theme = ExtResource( 6 )

[node name="RestartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 128.0
rect_min_size = Vector2( 512, 128 )
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ExitButton")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 6 )
text = "Restart"

[node name="ExitButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 512.0
margin_bottom = 276.0
rect_min_size = Vector2( 512, 128 )
focus_neighbour_top = NodePath("../RestartButton")
focus_next = NodePath("../RestartButton")
focus_previous = NodePath("../RestartButton")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 6 )
text = "Back to Menu"

[connection signal="timeout" from="CloudTimer" to="." method="_on_CloudTimer_timeout"]
[connection signal="timeout" from="HorseTimer" to="." method="_on_HorseTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
